Fixed z-index of mobile nav.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -367,12 +367,13 @@ html, body, h1, p {
   display: flex;
   flex-direction: column;
   background-color: #171717;
-  height: 100vh;
+  height: 100%;
   transition: opacity 500ms ease-in;
   position: absolute;
   position: fixed;
   width: 100%;
-  opacity: 0.97; }
+  opacity: 0.97;
+  z-index: 1; }
   .mobileNavBarExpanded .mobileMenuContainer {
     height: 90%;
     width: 100%;
@@ -390,14 +391,14 @@ html, body, h1, p {
       text-align: center; }
       .mobileNavBarExpanded .mobileMenuContainer .buttonListContainer .buttonContainer {
         width: 100%;
-        height: 15%;
+        height: 16%;
         display: flex;
         justify-content: center;
         align-items: center;
         text-decoration: none;
         text-transform: uppercase; }
         .mobileNavBarExpanded .mobileMenuContainer .buttonListContainer .buttonContainer:hover {
-          background-color: #1B998B;
+          background-color: #177E72;
           cursor: pointer; }
         .mobileNavBarExpanded .mobileMenuContainer .buttonListContainer .buttonContainer .menuItems {
           height: 100%;
